# thegrid

./: .bazelrc  .gitignore  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  WORKSPACE  gemini_commit_message.txt  go.mod  go.sum  go_repositories.bzl  index.html  package-lock.json  package.json  run_server.sh
.github/workflows/: deploy.yml
animdemo/: BUILD.bazel  animdemo.go  index.html
apps/animdemo/: BUILD.bazel  animdemo.css  index.html
apps/delta/: BUILD.bazel  body.html.tpl  delta.css  delta.go  game.go  head.html.tpl  index.html  index.html.tpl
apps/explorers/: BUILD.bazel  explorers.go  index.html  map-display.css
apps/explorers/data/: BUILD.bazel  pathdata.go
apps/explorers/data/data/: BUILD.bazel
apps/explorers/data_migrator/: BUILD.bazel  main.go
apps/explorers/dataservice/: BUILD.bazel  client.go
apps/explorers/model/: BUILD.bazel  model.go
apps/explorers/notes/: firebase_backend.md
apps/explorers/view/: BUILD.bazel  view.go
apps/lissajous/: BUILD.bazel  index.html  lissajous.css  lissajous.go
apps/solitaire/: BUILD.bazel  index.html  solitaire.css  solitaire.go
apps/solitaire/klondike/: BUILD.bazel  klondike.go  klondike_test.go
apps/solitaire/server/: BUILD.bazel  server.go
cardkit/card/: BUILD.bazel  card.go
cardkit/deck/: BUILD.bazel  deck.go
cardkit/pile/: BUILD.bazel  pile.go
cardkit/ui/: BUILD.bazel  ui.css  ui.go
example/: BUILD.bazel  example.go  index.html  map-display.css
example/server/: BUILD.bazel  server.go
example/server/data/: BUILD.bazel  data.go  pathdata.go
example/view/: BUILD.bazel  view.go
explorers/: BUILD.bazel  explorers.go
explorers/data/: BUILD.bazel
explorers/data/data/: BUILD.bazel
explorers/server/: BUILD.bazel  server.go
explorers/server/data/: BUILD.bazel
explorers/view/: BUILD.bazel  view.go
firebase/: BUILD.bazel  firebase.go  firebase.js
firebase/auth/: BUILD.bazel  auth.go  auth.js  bundle.js
firebase/authui/: BUILD.bazel  auth.css  auth.html.tpl  auth_ui.html.tpl  authui.go
firebase/firestore/: BUILD.bazel  bundle.js  firestore.go  firestore.js
hexmap/: BUILD.bazel  hexagon.go  hexmap.go
js/: BUILD.bazel  dom.go  style.go  svg.go
js/attr/: BUILD.bazel  attr.go
js/canvas/: BUILD.bazel  canvas.go
js/dragdrop/: BUILD.bazel  dragdrop.go
js/style/: BUILD.bazel  style.go
js/svg/: BUILD.bazel  defs.go  g.go  path.go  pattern.go  svg.go
model/: BUILD.bazel  data.go  model.go
notes/: board.md  canvas.md  card_game_engine.md  crossword_canvas.md  double_buffering.md  event_driven_dom.md  firebase_auth.md  gemini_esbuild.txt  hex_component.md  todo.md
secretmanager/: BUILD.bazel  client.go
server/: BUILD.bazel  config.json.example  server.go  server_test.go
server/templates/: BUILD.bazel  layout.html.tpl
solitaire/: BUILD.bazel  index.html  solitaire.css  solitaire.go  solitaire.wasm
solitaire/game/: BUILD.bazel  game.go  game_test.go
solitaire/klondike/: BUILD.bazel  game.go  klondike.go
solitaire/server/: BUILD.bazel
