module(
    name = "thegrid",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "gazelle", version = "0.44.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")

go_sdk = use_repo_rule("@rules_go//go:def.bzl", "go_sdk")

go_sdk(
    name = "go_sdk",
    version = "1.23.0",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")