load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_zip")

go_library(
    name = "animdemo_lib",
    srcs = ["animdemo.go"],
    importpath = "github.com/cshabsin/thegrid/animdemo",
    visibility = ["//visibility:public"],
    deps = [
        "//js",
        "//js/canvas",
    ],
)

go_binary(
    name = "animdemo.wasm",
    embed = [":animdemo_lib"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)

pkg_zip(
    name = "animdemo_pkg",
    srcs = [
        "index.html",
        "animdemo.css",
        ":animdemo.wasm",
    ],
    visibility = ["//server:__pkg__"],
)
