load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_zip")

go_library(
    name = "example",
    srcs = ["example.go"],
    importpath = "github.com/cshabsin/thegrid/example",
    visibility = ["//visibility:private"],
    deps = [
        "//example/server/data",
        "//example/view",
        "//hexmap",
        "//js",
        "//js/attr",
        "//js/svg",
        "//model",
    ],
)

go_binary(
    name = "example.wasm",
    embed = [":example"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)

pkg_zip(
    name = "example_pkg",
    srcs = [
        "index.html",
        "map-display.css",
        ":example.wasm",
    ],
    visibility = ["//server:__pkg__"],
)
