load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "dom.go",
        "style.go",
    ],
    importpath = "github.com/cshabsin/thegrid/js",
    visibility = ["//visibility:public"],
    deps = [
        "//js/attr:go_default_library",
        "//js/style:go_default_library",
    ],
)
