load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["model.go"],
    importpath = "github.com/cshabsin/thegrid/model",
    visibility = ["//visibility:public"],
    deps = [
        "//example/server/data:go_default_library",
        "//example/view:go_default_library",
    ],
)
