load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "server",
    data = [
        "//explorers:explorers_pkg",
        "//solitaire:solitaire_pkg",
        "//animdemo:animdemo_pkg",
        ":static/wasm_exec.js",
    ],
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "server_lib",
    srcs = ["server.go"],
    importpath = "github.com/cshabsin/thegrid/server",
    visibility = ["//visibility:private"],
    deps = [
        "//explorers/data/data",
    ],
)
