load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_binary(
    name = "server",
    data = [
        ":static/wasm_exec.js",
        "//apps/animdemo:animdemo_pkg",
        "//apps/delta:delta_pkg",
        "//apps/explorers:explorers_pkg",
        "//apps/lissajous:lissajous_pkg",
        "//apps/solitaire:solitaire_pkg",
        "//firebase/auth:bundle",
        "//firebase/authui:auth_templates",
        "//server/templates:layout",
    ],
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "server_lib",
    srcs = ["server.go"],
    importpath = "github.com/cshabsin/thegrid/server",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/explorers/data",
        "//secretmanager",
        
    ],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    embed = [":server_lib"],
    data = [
        "//server/templates:layout",
        "//firebase/authui:auth_templates",
    ],
)
