load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_zip")

go_library(
    name = "solitaire",
    srcs = ["solitaire.go"],
    importpath = "github.com/cshabsin/thegrid/solitaire",
    visibility = ["//visibility:private"],
    deps = [
        "//js",
        "//js/attr",
        "//js/dragdrop",
        "//js/style",
        "//solitaire/game",
    ],
)

go_binary(
    name = "solitaire_wasm",
    embed = [":solitaire"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)

pkg_zip(
    name = "solitaire_pkg",
    srcs = [
        "index.html",
        "solitaire.css",
        "wasm_exec.js",
        ":solitaire_wasm",
    ],
    visibility = ["//:__pkg__"],
)
