load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_zip")

go_library(
    name = "solitaire",
    srcs = ["solitaire.go"],
    importpath = "github.com/cshabsin/thegrid/solitaire",
    visibility = ["//visibility:private"],
    deps = [
        "//cardkit/card",
        "//js",
        "//js/attr",
        "//js/dragdrop",
        "//js/style",
        "//solitaire/klondike",
    ],
)

go_binary(
    name = "solitaire.wasm",
    embed = [":solitaire"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)

pkg_zip(
    name = "solitaire_pkg",
    srcs = [
        "index.html",
        "solitaire.css",
        "wasm_exec.js",
        ":solitaire.wasm",
    ],
    visibility = ["//server:__pkg__"],
)
