load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_zip")

go_binary(
    name = "delta.wasm",
    embed = [":delta_lib"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)

pkg_zip(
    name = "delta_pkg",
    srcs = [
        "delta.css",
        "index.html.tpl",
        ":delta.wasm",
        "//cardkit/ui:css",
        "//firebase/auth:js",
        "//firebase/authui:auth_templates",
    ],
    visibility = ["//server:__pkg__"],
)

go_library(
    name = "delta_lib",
    srcs = ["delta.go"],
    importpath = "github.com/cshabsin/thegrid/apps/delta",
    visibility = ["//visibility:private"],
    deps = [
        "//cardkit/card",
        "//cardkit/deck",
        "//cardkit/pile",
        "//cardkit/ui",
        "//firebase/auth",
        "//firebase/authui",
        "//js",
    ],
)
