load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_zip")

go_library(
    name = "lissajous_lib",
    srcs = ["lissajous.go"],
    importpath = "github.com/cshabsin/thegrid/apps/lissajous",
    visibility = ["//visibility:private"],
    deps = ["//js/canvas"],
)

go_binary(
    name = "lissajous.wasm",
    embed = [":lissajous_lib"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)

pkg_zip(
    name = "lissajous_pkg",
    srcs = [
        "index.html",
        "lissajous.css",
        ":lissajous.wasm",
    ],
    visibility = ["//server:__pkg__"],
)
