load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_zip")

go_library(
    name = "solitaire_lib",
    srcs = ["solitaire.go"],
    importpath = "github.com/cshabsin/thegrid/apps/solitaire",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/solitaire/klondike",
        "//cardkit/ui",
        "//js",
    ],
)

go_binary(
    name = "solitaire.wasm",
    embed = [":solitaire_lib"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)

pkg_zip(
    name = "solitaire_pkg",
    srcs = [
        "index.html",
        "solitaire.css",
        ":solitaire.wasm",
        "//cardkit/ui:css",
    ],
    visibility = ["//server:__pkg__"],
)
