load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "ui",
    srcs = ["ui.go"],
    importpath = "github.com/cshabsin/thegrid/cardkit/ui",
    visibility = ["//visibility:public"],
    deps = [
        "//cardkit/card",
        "//cardkit/pile",
        "//js",
        "//js/attr",
        "//js/dragdrop",
        "//js/style",
    ],
)
