load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "example_server",
    srcs = ["server.go"],
    importpath = "github.com/cshabsin/thegrid/example/server",
    visibility = ["//visibility:private"],
    deps = ["//example/server/data"],
)

go_binary(
    name = "server",
    embed = [":example_server"],
    visibility = ["//visibility:public"],
)
