load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "view",
    srcs = ["view.go"],
    importpath = "github.com/cshabsin/thegrid/example/view",
    visibility = ["//visibility:public"],
    deps = [
        "//example/server/data",
        "//hexmap",
        "//js",
        "//js/attr",
        "//js/svg",
    ],
)
