load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "explorers_server",
    srcs = ["server.go"],
    importpath = "github.com/cshabsin/thegrid/explorers/server",
    visibility = ["//visibility:private"],
    deps = ["//explorers/server/data"],
)

go_binary(
    name = "server",
    embed = [":explorers_server"],
    visibility = ["//visibility:public"],
)
