load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "firestore",
    srcs = ["firestore.go"],
    importpath = "github.com/cshabsin/thegrid/firebase/firestore",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_cloud_go_firestore//:firestore",
        "@org_golang_google_api//option",
    ],
)
