load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "svg",
    srcs = [
        "defs.go",
        "g.go",
        "path.go",
        "pattern.go",
        "svg.go",
    ],
    importpath = "github.com/cshabsin/thegrid/js/svg",
    visibility = ["//visibility:public"],
    deps = [
        "//js",
        "//js/attr",
    ],
)
