load("@rules_go//go:def.bzl", "go_test", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["game.go"],
    importpath = "github.com/cshabsin/thegrid/solitaire/game",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["game_test.go"],
    embed = [":go_default_library"],
)
