load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "game",
    srcs = ["game.go"],
    importpath = "github.com/cshabsin/thegrid/solitaire/game",
    visibility = ["//visibility:public"],
)

go_test(
    name = "game_test",
    srcs = ["game_test.go"],
    embed = [":game"],
)

go_library(
    name = "klondike",
    srcs = ["game.go"],
    importpath = "github.com/cshabsin/thegrid/solitaire/klondike",
    visibility = ["//visibility:public"],
    deps = [
        "//cardkit/card",
        "//cardkit/pile",
    ],
)
