load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "dataservice",
    srcs = ["client.go"],
    importpath = "github.com/cshabsin/thegrid/apps/explorers/dataservice",
    visibility = ["//apps/explorers:__subpackages__"],
    deps = [
        "//apps/explorers/data",
        "@com_google_cloud_go_firestore//:firestore",
        "@com_google_firebase_go_v4//:go",
        "@org_golang_google_api//iterator",
    ],
)
