load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "solitaire_server",
    srcs = ["server.go"],
    importpath = "github.com/cshabsin/thegrid/solitaire/server",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "server",
    embed = [":solitaire_server"],
    visibility = ["//visibility:public"],
)
